--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Radyo Alone</title>
-    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3-theme-purple.css">
+    <link rel="stylesheet" href="./css/w3.css">
+    <link rel="stylesheet" href="./css/w3-theme-purple.css">
     <link rel='stylesheet' href='./css/style.css' />
     <link rel='stylesheet' href='./css/slider.css' />
 
