--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <div class="w3-row">
 
     <div class="w3-col l9 m9 s5">
-        <img id="logo" src="./images/logo/logo-unew.png">
+        <img id="logo" src="./images/logo/logo-unew.png" alt="Radyo Alone">
     </div>
 
     <div class="w3-col l2 m2 s5">
@@ -382,7 +382,7 @@
         <li class="w3-padding-16">
 
             <i class="fa fa-whatsapp  w3-xxlarge w3-left w3-margin-right"></i>
-            <span class="w3-large w3-margin-left"> 05385194947  </span>
+            <span class="w3-large w3-margin-left"> 05385194947 - Yalnızca Whatsapp Online</span>
 
         </li>
         <li class="w3-padding-16">
