--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 
   <script src="https://use.fontawesome.com/5341fa64c9.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script type="text/javascript" src="./dist/jplayer/jquery.jplayer.min.js"></script>
 
   <script>
     (function (i, s, o, g, r, a, m) {
@@ -40,38 +39,6 @@
       },
         ready = false;
 
-      $("#jquery_jplayer_1").jPlayer({
-        ready: function (event) {
-          ready = true;
-          $(this).jPlayer("setMedia", stream);
-          $(this).jPlayer("play");
-        },
-        pause: function () {
-          $(this).jPlayer("clearMedia");
-        },
-        error: function (event) {
-          if (ready && event.jPlayer.error.type === $.jPlayer.error.URL_NOT_SET) {
-            // Setup the media stream again and play it.
-            $(this).jPlayer("setMedia", stream).jPlayer("play");
-          }
-        },
-        nativeVideoControls: {
-          ipad: /ipad/,
-          iphone: /iphone/,
-          android: /android/,
-          blackberry: /blackberry/,
-          iemobile: /iemobile/
-        },
-        solution: "flash, html",
-        swfPath: "./dist/jplayer",
-        supplied: "mp3",
-        preload: "none",
-        wmode: "window",
-        useStateClassSkin: true,
-        autoBlur: false,
-        autoPlay: true,
-        keyEnabled: true
-      });
 
     });
     //]]>
@@ -94,36 +61,17 @@
 
     <div class="w3-container w3-padding w3-theme w3-card-8" style="background-color:rgba(155, 39, 176, 0.2) !important">
       <div class="w3-row">
-
-        <div class="w3-col l9 m9 s5">
+        <center>
           <img id="logo" src="./images/logo/logo-unew.png" alt="Radyo Alone">
-        </div>
-        <!--
-        <div class="w3-col l2 m2 s5">
-          <button class="w3-btn w3-indigo w3-round-xxlarge">
-            <a href="http://radyoalone.radiostream321.com/">Alternatif <br> Link</a>
-          </button>
-        </div>-->
-        <div class="w3-col l1 m1 s2">
-          <div id="jquery_jplayer_1" class="jp-jplayer"></div>
-          <div id="jp_container_1" class="jp-audio-stream" role="application" aria-label="media player">
-            <div class="jp-type-single">
-              <div class="jp-gui jp-interface">
-                <div class="jp-controls">
-                  <button class="jp-play" role="button" tabindex="0">play</button>
-                </div>
-              </div>
+        </center>
+      </div>
 
-              <div class="jp-no-solution">
-                <span>Update Required</span> To play the media you will need to either update your
-                browser to a recent
-                version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash
-                  plugin</a>.
-              </div>
-            </div>
-          </div>
-        </div>
-
+      <div class="w3-row">
+        <center>
+        <audio controls>
+          <source src="http://78.129.224.21/stream.mp3?ipport=78.129.224.21_10892">
+      </audio>
+    </center>
       </div>
     </div>
 
