--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
   <script src="https://use.fontawesome.com/5341fa64c9.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
+  <script>
+  if (window.location.host.indexOf('github.io') > -1 && window.location.protocol != "http:"){
+      window.location.protocol = "http";
+  }
+  </script>
   <script>
     (function (i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
