--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://use.fontawesome.com/5341fa64c9.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script>
-  if (window.location.host.indexOf('github.io') > -1 && window.location.protocol != "http:"){
+  if (window.location.protocol != "http:"){
       window.location.protocol = "http";
   }
   </script>
