--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
       </header>
 
       <div class="w3-container w3-theme-light">
-        <div class="w3-row w3-margin">
+        <div class="w3-row w3-margin" style="margin-bottom: 32px">
 
           <div class="w3-container w3-third">
             <div class="w3-card-4">
