--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="w3-row">
         <center>
         <audio controls>
-          <source src="http://78.129.139.48/stream.mp3?ipport=78.129.139.48_8748">
+          <source src="https://fps5.listen2myradio.com:2199/listen.php?ip=78.129.139.48&port=8748&type=s1">
       </audio>
     </center>
       </div>
